advances with look and feel of UI. find correct alignment with rest of desktop items

--- a/styles/pages/tours.module.css
+++ b/styles/pages/tours.module.css
@@ -1,11 +1,59 @@
-.generalTourPage{
+/* TOUR COMPONENTS */
 
+.generalTourPage{
+    padding: 110px 0;
+    background-color: whitesmoke;
+    position: absolute;
+}
+
+.userIUFilterCont{
+    width: 100%;
+    background-color: var(--brown-main);
+    color: var(--pale-yellow);
+    display: flex;
+    justify-content: space-evenly;
+    position: sticky;
+    top: 0;
+    z-index: 33;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.364);
+    padding: 6px 0;
+    border-bottom: solid 2px;
+}
+
+.userIUFilterCont label{
+    margin: 6px;
+    font-size: 0.8em;
+    font-weight: 800;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+.userUISec{
+    width: 49%;
+    display: flex;
+    align-items: center;
+    padding: 6px;
+    justify-content: space-between;
+}
+.userUISec:nth-child(2){
+    border-left: solid 3px var(--dull-gold);
+}
+
+.aPickerUI{
+    width: 180px;
+    padding: 3px 9px;
+    font-size: 1.2em;
+    text-align: center;
+    text-transform: capitalize;
+    background-color: var(--brown-main);
+    color: var(--pale-yellow);
+    border: solid 2.5px var(--pale-gold);
+    border-radius: 5px;
 }
 
 .tourCardContainer{
     min-height: 40vh;
     width: 100%;
-    background-color: whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;
